--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -93,14 +93,14 @@ phone = "804-564-1245"
 
 # Address
 # For country_code, use the 2-letter ISO code (see https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2 )
-address = {street = "109 Governor Street", city = "Richmond", region = "VA", postcode = "23219", country = "United States", country_code = "US"}
+address = {street = "250 Rocketts Way", city = "Richmond", region = "VA", postcode = "23231", country = "United States", country_code = "US"}
 
 # Geographic coordinates
 # To get your coordinates, right-click on Google Maps and choose "What's here?". The coords will show up at the bottom.
-coordinates = {latitude = "37.537135", longitude = "-77.431679"}
+coordinates = {latitude = "37.516414", longitude = "-77.414518"}
 
 # Directions for visitors to locate you.
-directions = "Enter Madison Building and take the elevator to the 10th Floor"
+directions = "Working Remote"
 
 # Office hours
 # A list of your office hours. To remove, set to an empty list `[]`.
